--- a/src/html/parts/header.html
+++ b/src/html/parts/header.html
@@ -162,5 +162,6 @@
     </div>
     </nav>
 </header>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <!-- <div class="overlay" x-show="headerSearch === true" @click="headerSearch = false">
 </div> -->
