fixing check-list

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -90,9 +90,7 @@
 				<h3>Более экологичные модели Less Water</h3>
 				<a href="#" class="variant-1-btn index-video__btn">посмотреть сейчас</a>
 	</div>
-	<div class="video">
-	<video src="files/video.mp4" autoplay="true" loop="true" muted="true" width="375" height="500"></video>
-    </div>
+	<div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/723730796?h=5e3833dbf6" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 </div> -->
 <section class="new-collections" data-aos="animate-in-view">
 	<div class="container new-collections__container">
@@ -123,7 +121,7 @@
 							  </svg>
 					  </span>
 						</div>
-						<a href="#" class="variant-2-btn clothes-card__link">посмотреть сейчас</a>
+						<a href="#" class="variant-1-btn clothes-card__link">посмотреть сейчас</a>
 				    </div>
 					<picture>
 						<source type="image/jpg" srcset="resources/images/new-collections-card-img--desktop-xl.jpg" media="(min-width:1920px)">
@@ -155,7 +153,7 @@
 							  </svg>
 					  </span>
 						</div>
-						<a href="#" class="variant-2-btn clothes-card__link">посмотреть сейчас</a>
+						<a href="#" class="variant-1-btn clothes-card__link">посмотреть сейчас</a>
 				    </div>
 					<picture>
 						<source type="image/jpg" srcset="resources/images/new-collections-card-img--desktop-xl.jpg" media="(min-width:1920px)">
@@ -185,7 +183,7 @@
 							  </svg>
 					  </span>
 						</div>
-						<a href="#" class="variant-2-btn clothes-card__link">посмотреть сейчас</a>
+						<a href="#" class="variant-1-btn clothes-card__link">посмотреть сейчас</a>
 				    </div>
 					<picture>
 						<source type="image/jpg" srcset="resources/images/new-collections-card-img--desktop-xl.jpg" media="(min-width:1920px)">
@@ -343,7 +341,7 @@
 							  </svg>
 					  </span>
 						</div>
-						<a href="#" class="variant-2-btn clothes-card__link">посмотреть сейчас</a>
+						<a href="#" class="variant-1-btn clothes-card__link">посмотреть сейчас</a>
 				    </div>
 					<picture>
 						<source src="resources/images/season-popular-card-img--desktop-2.jpg" media="(min-width:1920px)">
