--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -1,4 +1,5 @@
 <footer class="footer">
+    <div class="footer__top">
     <form action="#" class="footer__mail">
         <fieldset>
             <legend>REAL ACTION Новостная рассылка</legend>
@@ -14,6 +15,7 @@
             </div>
         </fieldset>
     </form>
+    </div>
     <div class="container footer__container">
      <nav class="footer__menu footer__menu--mobile">
         <div class="footer__menu-row">
