--- a/src/html/parts/head.html
+++ b/src/html/parts/head.html
@@ -22,5 +22,9 @@
   rel="stylesheet"
   href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
 />
+<link
+rel="stylesheet"
+href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
+/>
 <link rel="stylesheet" href="styles/main.css" />
 </head>
