--- a/src/html/parts/head.html
+++ b/src/html/parts/head.html
@@ -26,5 +26,9 @@
 rel="stylesheet"
 href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
 />
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css"
+/>
 <link rel="stylesheet" href="styles/main.css" />
 </head>
