--- a/src/html/pages/product-card.html
+++ b/src/html/pages/product-card.html
@@ -223,7 +223,7 @@
               </section>
             </div>
             </div>
-            <section class="gather-collection">
+            <section class="gather-collection" data-aos="animate-in-view">
               <div class="container-alt gather-collection__container">
                 <div class="swiper gather-collection-slider">
                   <h2>Соберите коллекцию</h2>
