--- a/src/html/pages/passwordRecovery.html
+++ b/src/html/pages/passwordRecovery.html
@@ -3,7 +3,7 @@
 	@@include('../parts/head.html',{
 	"title":"Страница востановления пароля"
 	})
-	<body x-data="{mobileMenu:false, headerSearch: false, headerMegaMenu: false, passwordRecoveryModal: false}">
+	<body x-data="{mobileMenu:false, headerSearch: false, headerMegaMenu: false, passwordRecoveryModal: false}" :class="{'overflow-hidden': passwordRecoveryModal === true }">
 		<script src="js/main.min.js" defer></script>
 		@@include('../parts/header.html')
 		<main>
