--- a/src/html/pages/passwordChange.html
+++ b/src/html/pages/passwordChange.html
@@ -3,7 +3,7 @@
 	@@include('../parts/head.html',{
 	"title":"Страница смены пароля"
 	})
-	<body x-data="{mobileMenu:false, headerSearch: false, headerMegaMenu: false, passwordChangeModal: false}">
+	<body x-data="{mobileMenu:false, headerSearch: false, headerMegaMenu: false, passwordChangeModal: false}" :class="{'overflow-hidden': passwordChangeModal === true }">
 		<script src="js/main.min.js" defer></script>
 		@@include('../parts/header.html')
 		<main>
