--- a/src/html/pages/registration.html
+++ b/src/html/pages/registration.html
@@ -3,7 +3,7 @@
 	@@include('../parts/head.html',{
 	"title":"Страница регистрации"
 	})
-	<body x-data="{mobileMenu:false, headerSearch: false, headerMegaMenu: false, regModal: false}">
+	<body x-data="{mobileMenu:false, headerSearch: false, headerMegaMenu: false, regModal: false}" :class="{'overflow-hidden': regModal === true}">
 		<script src="js/main.min.js" defer></script>
 		@@include('../parts/header.html')
 		<main>
