ready delivery-info

--- a/src/html/pages/guarantee-page.html
+++ b/src/html/pages/guarantee-page.html
@@ -20,7 +20,7 @@
             </div>
             </nav>
             <div class="container-alt guarantee-page-container">
-            <section class="guarantee-page">
+            <section class="guarantee-page" data-aos="animate-in-view">
                 <h1 class="section-page-title guarantee-page__title"><span>Гарантии и возврат</span></h1>
                 <div class="guarantee-page-info">
                     <p>В REAL ACTION мы гордимся качеством нашей продукции, которое за полвека достигло высочайшего уровня благодаря постоянному развитию, контролю на всех этапах собственной разработки и производства. Качество товаров REAL ACTION подтверждено регулярным выбором наших постоянных клиентов.
