--- a/src/html/pages/sale-page.html
+++ b/src/html/pages/sale-page.html
@@ -19,7 +19,7 @@
                 </ul>
             </div>
             </nav>
-            <section class="sale-page">
+            <section class="sale-page" data-aos="animate-in-view">
                 <div class="container-alt sale-page__container">
                 <h1 class="section-page-title sale-page__title"><span>Акции на одежду</span></h1>
                 <div class="sale-page__grid">
