--- a/src/html/parts/header.html
+++ b/src/html/parts/header.html
@@ -163,5 +163,6 @@
     </nav>
 </header>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js" defer></script>
 <!-- <div class="overlay" x-show="headerSearch === true" @click="headerSearch = false">
 </div> -->
